# otus-homework-01

./: CMakeFile.txt  CMakeLists.txt  README.md  main.cpp
.github/workflows/: c-cpp.yml
include/: QuadEqu.h
source/: QuadEqu.cpp
tests/: main.cpp  test1.cpp
